background effect jump is solved

--- a/src/sample.scss
+++ b/src/sample.scss
@@ -8,6 +8,7 @@
   #ff34d2 100%
   );
   background-size: 200% 200%;
+  background-attachment: fixed;
   animation: mg 4s linear infinite alternate;
 
   @keyframes mg {
